-
Bug
-
Resolution: Done
-
P2: Important
-
5.8.0 RC
-
None
-
6f7852a307c7ebbdb3b6efa00cbf7626b072bbc1
If you click on a Switch and release in the middle of it it doesn't move to completely ON or completely OFF, see attached screenshot.
For Gerrit Dashboard: QTBUG-57944 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
181539,4 | Switch(Delegate): fix handle snapping | 5.8.0 | qt/qtquickcontrols2 | Status: MERGED | +2 | 0 |