Switch(Delegate): fix handle snapping

When Switch is released, nextCheckState() gets called to set the
appropriate check state depending on the handle position. If the
check state does not change, it must force a position update to
avoid that the handle is left somewhere in the middle.

Task-number: QTBUG-57944
Change-Id: I872160dafaa7dbf676b026fcc6ba0d0507a91a05
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>