src/quicktemplates2/qquickswitchdelegate.cpp
@@ -191,10 +191,14 @@ void QQuickSwitchDelegate::mirrorChange()
 void QQuickSwitchDelegate::nextCheckState()
 {
     Q_D(QQuickSwitchDelegate);
-    if (keepMouseGrab())
+    if (keepMouseGrab()) {
         setChecked(d->position > 0.5);
-    else
+        // the checked state might not change => force a position update to
+        // avoid that the handle is left somewhere in the middle (QTBUG-57944)
+        checkStateSet();
+    } else {
         QQuickItemDelegate::nextCheckState();
+    }
 }
 
 void QQuickSwitchDelegate::checkStateSet()
